atomiq-derive/tests/fail_derive_enum_args.stderr
error: Atomizable can only be derived for enums with only unit variants.
 --> tests/fail_derive_enum_args.rs:7:6
  |
7 |     B(u8),
  |      ^^^^

error: Atomizable can only be derived for enums with only unit variants.
 --> tests/fail_derive_enum_args.rs:8:7
  |
8 |     C { value: u8 },
  |       ^^^^^^^^^^^^^
